--- a/index.html
+++ b/index.html
@@ -35,5 +35,6 @@
       <list><a href="info/ancestry.html">Ancestry</a> - History of how the Vedic Aryans came to be </list><br>
       <list><a href="info/history.html">History</a> - History of the Vedic Aryans </list><br>
       <list><a href="info/culture.html">Culture</a> - Culture of the Vedic Aryans </list><br>
+      <list><a href="info/hymns.html">Mantras</a> - Important Mantras </list><br>
 </body>
 </html>
