--- a/info/culture.html
+++ b/info/culture.html
@@ -50,12 +50,13 @@
       <p>Clan assemblies (vidāthā, samiti, sabhā) and rituals like yajña (Vedic sacrifice) were pivotal, led by a chief who functioned as a war leader and received tribute (bali) for protecting the clan. Punishment mirrored the wergild principle, with compensation based on social rank.</p>
     </div>
 
-    <!-- Section: Chariot Warfare -->
+    <!-- Section: Warfare of the Aryans -->
     <div class="section">
-      <h2>Chariot Warfare</h2>
-      <p>Chariot warfare was integral to Vedic culture, reflecting their martial prowess and military strategy. The chariot, drawn by horses, provided mobility and firepower in battles, allowing skilled warriors to engage in swift and decisive maneuvers.</p>
-      <p>Chariot races and feats of archery were celebrated in religious and social contexts, highlighting their importance in both warfare and ceremonial life.</p>
-    </div>
+      <h2>Warfare of the Aryans</h2>
+      <p>Warfare was central to Aryan society, reflecting their military skills and strategic prowess. Aryans engaged in battles using various weapons and tactics to expand their territories and protect their communities.</p>
+      <p>Skilled warriors played a vital role in Aryan society, demonstrating valor and leadership on the battlefield. Warfare not only secured resources and territories but also shaped their social hierarchy and cultural identity.</p>
+</div>
+
 
     <!-- Section: Ideological Stance as Āryans -->
     <div class="section">
@@ -101,17 +102,13 @@
       <p>Together, these texts provide a comprehensive view of Vedic culture, encompassing spirituality, social structure, and philosophical insights.</p>
     </div>
 
-    <!-- Section: Legacy -->
-    <div class="section">
-      <h2>Legacy</h2>
-      <p>The legacy of the Vedic Āryans is profound, shaping the cultural and spiritual landscape of India for millennia:</p>
-      <ul>
-        <li><strong>Hinduism:</strong> Many foundational elements of Hinduism, including religious practices, rituals, and philosophical concepts, trace their origins to Vedic traditions.</li>
-        <li><strong>Sanskrit Literature:</strong> The development of Sanskrit as a literary and religious language owes much to the Vedic period, influencing subsequent Indian literature.</li>
-        <li><strong>Cultural Contributions:</strong> Their advancements in metallurgy, agriculture, and social organization laid the groundwork for early Indian civilization.</li>
-      </ul>
-      <p>Overall, the Vedic Āryans left a lasting imprint on Indian culture and continue to be revered for their contributions to religion, philosophy, and society.</p>
-    </div>
+  <!-- Section: Legacy of the Vedic Aryans -->
+  <div class="section">
+    <h2>Legacy of the Vedic Aryans</h2>
+    <p>The later Vedic period witnessed significant cultural and philosophical transformations. Siddhartha Gautama, known as the Buddha, emerged during this time and his teachings of the Four Noble Truths and the Eightfold Path spread across India, challenging traditional Vedic practices.</p>
+    <p>During this era, Hindu epics like the Mahabharata and Ramayana were composed, narrating epic conflicts and moral dilemmas while reflecting evolving societal norms. These texts, along with the Puranas, expanded upon Vedic deities such as Rudra evolving into Shiva and Vishnu gaining prominence.</p>
+    <p>The period also saw the rise of agnostic trends questioning Vedic rituals, alongside the growing influence of ahimsa (non-violence) as a cornerstone of Indian spirituality. This transformative period shaped the cultural and spiritual landscape of ancient India, blending Vedic traditions with new philosophical and religious movements.</p>
+  </div>
 
   </div>
 
