--- a/info/deities.html
+++ b/info/deities.html
@@ -33,5 +33,21 @@
     <strong>Viṣṇu</strong> - Solar deity of preservation <br>
     <strong>Yama</strong> - Deity of death, son of Surya <br>
     <strong>Parjánya</strong> - God of rain, epithet of Indra <br>
+
+  <!-- Deities list -->
+    <h1 class="heading">Deities</h1>
+    <strong>Devas</strong> - Divine beings associated with cosmic principles and natural forces<br>
+    <strong>Asuras</strong> - Deities that fight against the Devas<br>
+    <strong>Gandharvas</strong> - Celestial musicians and singers within Svarga<br>
+    <strong>Apsarās</strong> - Celestial nymphs, dancers married to the Gandharvas, maidens of Indra<br>
+    <strong>Maruts</strong> - Storm gods and celestial warriors linked with wind, rain, and thunder<br>
+    <strong>Viśvēdēvas</strong> - Collective term for all gods in Vedic hymns, representing cosmic forces<br>
+    <strong>Śrāddhadevāḥ</strong> - Ancestral deities honored during rituals for ancestors<br>
+    <strong>Aṅgiras</strong> - Divine beings or sages associated with Vedic hymns and rituals<br>
+    <strong>Adityas</strong> - Solar deities representing aspects of the sun's powers like warmth and light<br>
+    <strong>Vasus</strong> - Elemental gods representing natural forces such as earth, water, fire, wind, etc.<br>
+    <strong>Piśācas</strong> - Malevolent spirits or demons, linked with darkness and chaos<br>
+    <strong>Nāgas</strong> - Serpent deities or semi-divine beings associated with water, fertility, and cosmic forces<br>
+  </div>
 </body>
 </html>
