--- a/info/dictionary.html
+++ b/info/dictionary.html
@@ -12,7 +12,7 @@
 
   <!-- title -->
   <h1 class="heading">Dictionary</h1>
-  <p class="subtitle">List of Sanskrit words within the Ṛgveda</p>
+  <p class="subtitle">List of important Vedic Sanskrit words</p>
   <hr>
 
  <!-- Conceptual Words -->
@@ -20,7 +20,7 @@
   <h2>Concepts</h2>
   <ul>
     <li><strong>Brahman:</strong> Ultimate reality or universal principle</li>
-    <li><strong>Ṛta:</strong> Cosmic order or truth maintained through rituals and sacrifices</li>
+    <li><strong>Ṛta:</strong> Cosmic order and eternal truthli>
     <li><strong>Dharma:</strong> Moral duty, righteousness, or cosmic law</li>
     <li><strong>Ātman:</strong> Self or soul</li>
     <li><strong>Karma:</strong> Action, deed, or the principle of cause and effect</li>
@@ -66,7 +66,6 @@
   <h2>Family</h2>
   <ul>
     <li><strong>Gṛha:</strong> Home or household</li>
-    <li><strong>Ātman:</strong> Soul or self</li>
     <li><strong>Janman:</strong> Birth or lineage</li>
     <li><strong>Pitṛ:</strong> Father, ancestor</li>
     <li><strong>Mātṛ:</strong> Mother</li>
@@ -169,7 +168,6 @@
     <li><strong>Ana:</strong> Food or grain, generally offered in rituals</li>
     <li><strong>Śuddhi:</strong> Purified or consecrated food, prepared for rituals</li>
     <li><strong>Karambha:</strong> Food offering</li>
-    <li><strong>Bārhaspatya:</strong> Soma mixed with milk and curds</li>
     <li><strong>Udaka:</strong> Water, especially used in rituals</li>
     <li><strong>Anna:</strong> Food, grain, or rice</li>
     <li><strong>Madya:</strong> Fermented or intoxicating drink</li>
@@ -183,24 +181,25 @@
 <div class="section">
   <h2>Nature and Elements</h2>
   <ul>
-    <li><strong>Ākāśa:</strong> Sky or space.</li>
-    <li><strong>Vāyu:</strong> Wind or air.</li>
-    <li><strong>Agni:</strong> Fire.</li>
-    <li><strong>Jala:</strong> Water.</li>
-    <li><strong>Prithvī:</strong> Earth.</li>
-    <li><strong>Varṣā:</strong> Rain.</li>
-    <li><strong>Himā:</strong> Snow.</li>
-    <li><strong>Nadī:</strong> River.</li>
-    <li><strong>Sāgara:</strong> Sea.</li>
-    <li><strong>Parvata:</strong> Mountain.</li>
-    <li><strong>Candra:</strong> Moon.</li>
-    <li><strong>Sūrya:</strong> Sun.</li>
-    <li><strong>Van:</strong> Forest.</li>
-    <li><strong>Vṛkṣa:</strong> Tree.</li>
-    <li><strong>Megha:</strong> Cloud.</li>
-    <li><strong>Megha-garbha:</strong> Thunder.</li>
-    <li><strong>Vidyut:</strong> Lightning.</li>
-    <li><strong>Tara:</strong> Star.</li>
+    <li><strong>Ākāśa:</strong> Sky or space</li>
+    <li><strong>Vāyu:</strong> Wind or air</li>
+    <li><strong>Agni:</strong> Fire</li>
+    <li><strong>Jala:</strong> Water</li>
+    <li><strong>Prithvī:</strong> Earth</li>
+    <li><strong>Dyaús </strong> Daylight sky</li> 
+    <li><strong>Varṣā:</strong> Rain</li>
+    <li><strong>Himā:</strong> Snow</li>
+    <li><strong>Nadī:</strong> River</li>
+    <li><strong>Sāgara:</strong> Sea</li>
+    <li><strong>Parvata:</strong> Mountain</li>
+    <li><strong>Candra:</strong> Moon</li>
+    <li><strong>Sūrya:</strong> Sun</li>
+    <li><strong>Vana:</strong> Forest</li>
+    <li><strong>Vṛkṣa:</strong> Tree</li>
+    <li><strong>Megha:</strong> Cloud</li>
+    <li><strong>Meghagarjana:</strong> Thunder</li>
+    <li><strong>Vidyut:</strong> Lightning</li>
+    <li><strong>Tara:</strong> Star</li>
   </ul>
 </div>
 
