--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
       <h1> Encyclopedia </h1>
       <list><a href="info/dictionary.html">Dictionary</a> - Dictionary of sanskrit words within the Ṛgveda</list><br>
       <list><a href="info/deities.html">Deities</a> - List of deities within the Ṛgveda </list><br>
+      <list><a href="info/mantras.html">Mantras</a> - Important Mantras </list><br>
+      <list><a href="info/figures.html">Figures</a> - Important Vedic Aryan figures </list><br>
       <list><a href="info/ancestry.html">Ancestry</a> - History of how the Vedic Aryans came to be </list><br>
       <list><a href="info/history.html">History</a> - History of the Vedic Aryans </list><br>
       <list><a href="info/culture.html">Culture</a> - Culture of the Vedic Aryans </list><br>
-      <list><a href="info/hymns.html">Mantras</a> - Important Mantras </list><br>
 </body>
 </html>
