--- a/info/deities.html
+++ b/info/deities.html
@@ -16,12 +16,14 @@
   <hr>
   <div>
     <!-- Major Deities -->
-    <h1 class="heading">Major Deities</h1>
+    <h2 class="heading">Major Deities</h2>
     <strong>Indra</strong> - King of Gods, Emperor of Svarga, God of rain, thunder and war<br>
     <strong>Agni</strong> - God of fires and sacrifices <br>
+    <strong>Soma</strong> -  God of plants and the forest.<br>
     <strong>Varuṇa</strong> - God of cosmic order, associated with water <br>
     <strong>Sūrya</strong> - God of the Sun, symbolizing light and vitality <br>
     <strong>Mitrá</strong> -  God of friendships and contracts<br>
+    <strong>Aryaman</strong> - Protector of Horses <br>
     <strong>Uṣas</strong> - Goddess of dawn <br>
     <strong>Savitṛ</strong> - Solar deity, invoked for protection <br>
     <strong>Vāyu</strong> - God of wind <br>
@@ -34,8 +36,9 @@
     <strong>Yama</strong> - Deity of death, son of Surya <br>
     <strong>Parjánya</strong> - God of rain, epithet of Indra <br>
 
-  <!-- Deities list -->
-    <h1 class="heading">Deities</h1>
+
+    <!-- Deities list -->
+    <h2 class="heading">Deity groups</h2>
     <strong>Devas</strong> - Divine beings associated with cosmic principles and natural forces<br>
     <strong>Asuras</strong> - Deities that fight against the Devas<br>
     <strong>Gandharvas</strong> - Celestial musicians and singers within Svarga<br>
@@ -48,6 +51,30 @@
     <strong>Vasus</strong> - Elemental gods representing natural forces such as earth, water, fire, wind, etc.<br>
     <strong>Piśācas</strong> - Malevolent spirits or demons, linked with darkness and chaos<br>
     <strong>Nāgas</strong> - Serpent deities or semi-divine beings associated with water, fertility, and cosmic forces<br>
+
+    <!-- Minor deities -->
+    <h2 class="heading">Deity groups</h2>
+    <strong>Chitragupta</strong> - Record keeper of earthly deeds, Yama then decided whether the person goes to Svarga or Naraka<br>
+    <strong>Manas</strong> - Mind, one of the gods in Ṛgveda<br>
+    <strong>Dakṣiṇā</strong> - Offering or gift, personified as a goddess of rewards<br>
+    <strong>Puruṣa</strong> - Cosmic man sacrificed in the Puruṣa Sūkta<br>
+    <strong>Araṇyānī</strong> - Forest goddess<br>
+    <strong>Rātrī</strong> - Night, personified as a goddess<br>
+    <strong>Aditi</strong> - Mother of gods, infinite and boundless<br>
+    <strong>Śacī</strong> - Consort of Indra, associated with power and strength<br>
+    <strong>Bhaga</strong> - God of fortune and wealth<br>
+    <strong>Vasukra</strong> - Ṛṣi mentioned in Ṛgveda<br>
+    <strong>Āpam Napāt</strong> - Fire god, born of water<br>
+    <strong>Kṣetrapati</strong> - Lord of the field, associated with fertility<br>
+    <strong>Nirṛti</strong> - Goddess of destruction and death<br>
+    <strong>Asamāti</strong> - A form of Agni, divine fire<br>
+    <strong>Ūrvaśī</strong> - Apsara, celestial nymph<br>
+    <strong>Māyābheda</strong> - Slayer of illusion, associated with clarity<br>
+    <strong>Rātri</strong> - Goddess of the night<br>
+    <strong>Saṃjñā</strong> - Wife of Surya, mother of Manu<br>
+    <strong>Tvaṣṭṛ</strong> - Artisan of gods, father of Surya<br>
+    <strong>Vāc</strong> - God of Sound<br>
+    
   </div>
 </body>
 </html>
