--- a/info/dictionary.html
+++ b/info/dictionary.html
@@ -86,7 +86,7 @@
 
 <!-- Group-related Words -->
 <div class="section">
-  <h2>Groups</h2>
+  <h2>Society</h2>
   <ul>
     <li><strong>Ārya:</strong> A member of Vedic society, who is noble and honorable</li>
     <li><strong>Dasyu:</strong> Enemy, demon, or robber (often used for people perceived as hostile or non-Vedic)</li>
@@ -100,7 +100,9 @@
     <li><strong>Viś:</strong> Settlement</li>
     <li><strong>Gana:</strong> Group, multitude, or tribe</li>
     <li><strong>Brāhmaṇa:</strong> Priests or scholars</li>
-    <li><strong>Kṣatriya:</strong> Warriors and Kings</li>
+    <li><strong>Kṣatriya:</strong> Warriors and kings</li>
+    <li><strong>Rājan:</strong> King or ruler</li>
+    <li><strong>Rājanya:</strong> Noble or aristocrat, often synonymous with Kṣatriya</li>
     <li><strong>Vaiśya:</strong> Merchants or agricultural workers, a member of the viś</li>
     <li><strong>Śūdra:</strong> Servants and laborers, typically non-ārya who became servants</li>
     <li><strong>Ṛṣi:</strong> Sage or seer</li>
@@ -113,6 +115,8 @@
     <li><strong>Śatru:</strong> Enemy or adversary</li>
     <li><strong>Yajamāna:</strong> Sacrificer or patron (the person for whom the sacrifice is performed)</li>
     <li><strong>Purohita:</strong> Family priest or chief priest</li>
+    <li><strong>Kavi:</strong> Poet or sage with profound insight</li>
+    <li><strong>Vipra:</strong> Learned and inspired person, often a poet or sage</li>
   </ul>
 </div>
 
@@ -145,37 +149,32 @@
   </ul>
 </div>
 
-
-
-<!-- Food and Drink -->
 <div class="section">
-  <h2>Food and Drink</h2>
-  <ul>
-    <li><strong>Ājya:</strong> Ghee or clarified butter</li>
-    <li><strong>Soma:</strong> Sacred ritual drink</li>
-    <li><strong>Māṁsa:</strong> Meat </li>
-    <li><strong>Aśva-māṁsa:</strong> Horse meat, specifically used in sacrificial rituals</li>
-    <li><strong>Go-māṁsa:</strong> Cow meat </li>
-    <li><strong>Matsya:</strong> Fish </li>
-    <li><strong>Masūra:</strong> Lentils </li>
-    <li><strong>Puroḍāśa:</strong> Oblation or offering made of grains, flour and ghee</li>
-    <li><strong>Pāyasa:</strong> Rice pudding made with milk</li>
-    <li><strong>Madhu:</strong> Honey</li>
-    <li><strong>Apām:</strong> Water</li>
-    <li><strong>Dadhi:</strong> Curd or yogurt</li>
-    <li><strong>Mudga:</strong> Mung beans </li>
-    <li><strong>Masūra:</strong> Urad beans </li>
-    <li><strong>Ana:</strong> Food or grain, generally offered in rituals</li>
-    <li><strong>Śuddhi:</strong> Purified or consecrated food, prepared for rituals</li>
-    <li><strong>Karambha:</strong> Food offering</li>
-    <li><strong>Udaka:</strong> Water, especially used in rituals</li>
-    <li><strong>Anna:</strong> Food, grain, or rice</li>
-    <li><strong>Madya:</strong> Fermented or intoxicating drink</li>
-    <li><strong>Sura:</strong> Alcoholic drink, although generally seen as bad</li>
-    <li><strong>Kukkuṭa-māṁsa:</strong> Chicken meat</li>
-    <li><strong>Śaśī-māṁsa:</strong> Hare or rabbit meat</li>
-    <li><strong>Meṣa-māṁsa:</strong> Goat or sheep meat</li>
-  </ul>
+  <h2>Warfare</h2>
+  <ol>
+    <li><strong>Senā:</strong> Army or military force</li>
+    <li><strong>Yuddha:</strong> Warfare or battle</li>
+    <li><strong>Yoddha:</strong> Warrior or fighter</li>
+    <li><strong>Rāṇa:</strong> Battle or conflict</li>
+    <li><strong>Vīra:</strong> Hero or brave person</li>
+    <li><strong>Ratha:</strong> Chariot, often used in battles</li>
+    <li><strong>Ājīvaka:</strong> Mercenary or hired soldier</li>
+    <li><strong>Śastra:</strong> Weapon or implement, including weapons of war</li>
+    <li><strong>Asipatra:</strong> Sword or blade</li>
+    <li><strong>Dhanus:</strong> Bow, used in archery</li>
+    <li><strong>Bāṇa:</strong> Arrow, projectile</li>
+    <li><strong>Parigha:</strong> Mace or club</li>
+    <li><strong>Śūla:</strong> Spear or lance</li>
+    <li><strong>Śalya:</strong> Dart or javelin</li>
+    <li><strong>Varman:</strong> Armor or protective covering</li>
+    <li><strong>Abhivarman:</strong> Shield or defensive weapon</li>
+    <li><strong>Parākrama:</strong> Valor or prowess in battle</li>
+    <li><strong>Astra:</strong> Supernatural weapon, often associated with divine beings</li>
+    <li><strong>Amartya:</strong> Immortal, suggesting supernatural abilities in battle</li>
+    <li><strong>Pattis:</strong> Infantry or foot soldiers</li>
+    <li><strong>Rathis:</strong> Charioteers or those who drive chariots</li>
+    <li><strong>Prāpura:</strong> Fort or stronghold (note: not directly related to war, but included previously)</li>
+  </ol>
 </div>
 
 <div class="section">
@@ -190,16 +189,50 @@
     <li><strong>Varṣā:</strong> Rain</li>
     <li><strong>Himā:</strong> Snow</li>
     <li><strong>Nadī:</strong> River</li>
-    <li><strong>Sāgara:</strong> Sea</li>
+    <li><strong>Samudra:</strong> The Ocean</li>
     <li><strong>Parvata:</strong> Mountain</li>
     <li><strong>Candra:</strong> Moon</li>
+    <li><strong>Tara:</strong> Star</li></li>
     <li><strong>Sūrya:</strong> Sun</li>
+    <li><strong>Megha:</strong> Cloud</li>
+    <li><strong>Vajra:</strong> Thunder</li>
+    <li><strong>Vidyut:</strong> Lightning</li>
+    <li><strong>Giri:</strong> Hill</li>
     <li><strong>Vana:</strong> Forest</li>
     <li><strong>Vṛkṣa:</strong> Tree</li>
-    <li><strong>Megha:</strong> Cloud</li>
-    <li><strong>Meghagarjana:</strong> Thunder</li>
-    <li><strong>Vidyut:</strong> Lightning</li>
-    <li><strong>Tara:</strong> Star</li>
+    <li><strong>Patra:</strong> Leaf</li>
+    <li><strong>Puṣpa:</strong> Flower</li>
+    <li><strong>Bhūmi:</strong> Ground</li>
+    
+  </ul>
+</div>
+
+<div class="section">
+  <h2>Vedic Geography</h2>
+  <h3>Important Rivers</h3>
+  <ul>
+    <li><strong>Sarasvatī:</strong> The most important river in the Ṛgveda</li>
+    <li><strong>Sindhu:</strong> A of the major river where lots of aryans settled</li>
+    <li><strong>Gaṅgā:</strong> Revered river mentioned in various Vedic hymns</li>
+    <li><strong>Yamunā:</strong> Significant river praised in Vedic literature</li>
+    <li><strong>Sarasvatī:</strong> Mythical and important river celebrated in the Ṛgveda</li>
+    <li><strong>Satadru:</strong> Mentioned in the Ṛgveda, located in northwest India</li>
+    <li><strong>Vipāś:</strong> River mentioned in the Ṛgveda, located in Punjab region, known today as beas</li>
+    <li><strong>Kubhā River:</strong> Kubhā is a river flowing through the region of Gandhāra, known today as kabul river</li>
+  </ul>
+
+  <h3>Locations</h3>
+  <ul>
+    <li><strong>Sapta Sindhu:</strong> The region of seven rivers including the Sindhu (Indus), mentioned in the Ṛgveda</li>
+    <li><strong>Kuru:</strong> Region and kingdom associated with the Kuru dynasty, located around modern-day Delhi and Haryana</li>
+    <li><strong>Manas Sarovar:</strong> Sacred lake in the Himālayas mentioned in the Ṛgveda</li>
+    <li><strong>Himālayas:</strong> Sacred mountain range mentioned in Vedic texts as the abode of gods</li>
+    <li><strong>Mūjavant:</strong> Mt Muztagata in the Pamir range of Xinjiang, China. Where lots of Soma was gathered.</li>
+    <li><strong>Brahmāvarta:</strong> Sacred region for Vedic rituals, located in present-day Haryana</li>
+    <li><strong>Bhāratavarṣa:</strong> Bhāratavarṣa is the land ruled by the legendary king Bhārata.</li>
+    <li><strong>Naimiṣa Forest:</strong> Mentioned in Vedic texts as a sacred forest where sages performed rituals</li>
+    <li><strong>Gaṅgā Plain:</strong> Fertile region in northern India, mentioned in Vedic literature as an important agricultural and cultural area</li>
+    <li><strong>Videha:</strong> Ancient kingdom in the eastern Gaṅgātic plain, mentioned in Vedic texts and associated with King Janaka</li>
   </ul>
 </div>
 
