--- a/info/figures.html
+++ b/info/figures.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Ancestry</title>
+  <title>People</title>
   <link rel="stylesheet" href="../rgveda.css" />
   <link rel="icon" type="image/png" href="../media/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,11 +11,76 @@
   <script type="text/javascript" src="index.js"></script>
 
   <!-- title -->
-  <h1 class="heading">Ancestry</h1>
-  <p class="subtitle">The Ancestry of the Vedic Aryans</p>
+  <h1 class="heading">People</h1>
+  <p class="subtitle">The Important people in Vedic Aryan history</p>
   <hr>
 
+<div>  
+  <h2 class="heading">Vedic Tribes</h2>
+  <strong>Bhāratas</strong> - Ruled by King Sudās, known for victory in the Battle of the Ten Kings - Dāśarājñá yuddhá <br>
+  <strong>Pūrus</strong> - A confedoration of vedic tribes.<br>
+  <strong>Anu</strong> - One of the tribes fighting against the Bhāratas.<br>
+  <strong>Dhruhyus</strong> - Another of the coalition tribes that fought against the Bhāratas.<br>
+  <strong>Yadus</strong> - A major tribe often mentioned in connection with the Turvaśas and played a major role in early Vedic history.<br>
+  <strong>Turvaśas</strong> - A significant tribe during the Vedic period, connected with the Yadus.<br>
+  <strong>Pañcālas</strong> - A significant tribe in the late Vedic period, well known for their kṣatriya.<br>
+  <strong>Alinas</strong> - The Alinas were one of the tribes that fought against King Sudās in the Battle of the Ten Kings.<br>
+  <strong>Bhālānas</strong> - The Bhālānas were part of the coalition in the Battle of the Ten Kings, as mentioned in the Rigveda.<br>
+  <strong>Pakthas</strong> - The Pakthas were another tribe involved in the coalition against King Sudās.<br>
+  <strong>Śivas</strong> - The Śivas were a tribe that participated in the Battle of the Ten Kings.<br>
+  <strong>Viśānins</strong> - The Viśānins were among the ten tribes that formed the coalition against King Sudās.<br>
+  <strong>Parśus</strong> - The Parśus were one of the tribes involved in the Battle of the Ten Kings.<br>
+  <strong>Matsyas</strong> - The Matsyas were also part of the coalition in the Battle of the Ten Kings and were located in the northwestern region of ancient India.<br>
+  <strong>Kurus</strong> - The Kurus were an influential tribe in the Vedic period, predecessor of the Kuru Kingdom<br>
+  <strong>Trtsus</strong> - The Trtsus were a tribe allied with the Bhāratas, particularly noted in the context of the Battle of the Ten Kings.<br>
+  <strong>Iksvākus</strong> - The Iksvākus are mentioned in later Vedic texts.<br>
+  <strong>Kekayas</strong> - The Kekayas are mentioned in the Vedic text.<br>
+  <strong>Usīnaras</strong> - The Usīnaras were a tribe mentioned in the Ṛgveda, often associated with the Kuru-Pañcāla region.<br>
+  <strong>Śālvas</strong> - The Śālvas were another tribe mentioned in the Vedic texts.<br>
+  <strong>Alinas</strong> - One of the tribes participating in the Dāśarājñá who were allied with the Pūrus<br>
+  <strong>Gandhara</strong> - Home of Takṣaśila, a centre of knowledge in the late Vedic period<br>
+  <strong>Kīkaṭa</strong> A vedic tribe ruled by Pramaganda, didn't perform vedic rituals<br>
+  <strong>Āyu</strong><br>
+  <strong>Bhageratha</strong><br>
+  <strong>Chedi</strong><br>
+  <strong>Dṛbhīka</strong><br>
+  <strong>Guṅgu</strong><br>
+  <strong>Krivi</strong><br>
+  <strong>Mahīna</strong><br>
+  <strong>Malankhara</strong><br>
+  <strong>Maujavant</strong><br>
+  <strong>Nahuṣa</strong><br>
+  <strong>Panis</strong><br>
+  <strong>Pārāvata</strong><br>
+  <strong>Ruśama</strong><br>
+  <strong>Sārasvata</strong><br>
+  <strong>Srñjaya</strong><br>
+  
+  
+</div>
 
+<div>
+  <!-- Seven Rishis -->
+  <h2 class="heading">Rṣis</h2>
+  <strong>Viśvāmitra</strong> - Author of Mandala 3 of the Ṛgveda, purohita of Sudās<br>
+  <strong>Vaśiṣṭha</strong> - Author of many hymns, replacement purohita of Sudās<br>
+  <strong>Atri</strong> - Mandala 5 of the Ṛgveda are attributed to him and his descendants, the Atri clan (Atreyas)<br>
+  <strong>Bharadvāja</strong> - Mandala 6 of the Ṛgveda are attributed to him and his clan.<br>
+  <strong>Kaśyapa</strong> - Composed hymns within Mandala 9 of the Ṛgveda, main contributor of Soma hymns, founder of Káśmīra.<br>
+  <strong>Gautama</strong> - Composed many hymns within Mandala 1 of the Ṛgveda.<br>
+  <strong>Gṛtsamāda</strong> - Mandala 2 of the Ṛgveda is mostly attributed to him.<br>
+  <strong>Madhuchchhanda</strong> - Author of first 10 hymns in Mandala 1 of the Ṛgveda, son of Viśvāmitra<br>
+  <strong>Vāmadeva</strong> - Mandala 4 of the Ṛgveda is attributed to him and his clan.<br>
+  <strong>Agastya</strong> - Author of many hymns of the Vedas, typically describes the conflict between the Aryans and the Dasyu<br>
+  <strong>Aṅgirās</strong> - Mandala 8 of the Ṛgveda is mostly attributed to him.<br>
+  <strong>Dirghatamas</strong> - A revered rṣi for his philosophiocal wisdom in the Ṛgveda<br>
+  <strong>Kanva</strong> - Known for authorisng many hymns in Mandala 8<br>
+  <strong>Pulaha</strong> - Rṣi mentioned in Mandala 10 for his wisdom<br>
+  <strong>Kratu</strong> - Rṣi mentioned in Mandala 10 for his contributions to hymns<br>
+  <strong>Marīci</strong> - Rṣi mentioned for contributions to hymns <br>
+  <strong>Lopamudrā</strong> - Rṣika married to Agastya, authored many hymns<br>
+  <strong>Apālā</strong> - Rṣika who uthored hymns for Indra<br>
+  <strong>Ghoṣā</strong> - Rṣika mentioned in the Ṛgveda<br>
 </div>
 
 </body>
