--- a/info/culture.html
+++ b/info/culture.html
@@ -61,7 +61,7 @@
                 <li><b>Pitṛ</b> - father: The head of the household responsible for economic well-being, decision-making, and overseeing religious rituals.</li>
                 <li><b>Mātā</b> - mother: Manages domestic affairs, nurtures children, and plays a central role in the upbringing and education of the family.</li>
                 <li><b>Putra</b> - son: Expected to continue the family lineage, participate in religious rituals, and support the family economically as he grows older.</li>
-                <li><b>Putrī</b> - daughter: Plays a crucial role in family rituals and upbringing, often taking on domestic responsibilities and contributing to familial harmony.</li>
+                <li><b>duhitṛ</b> - daughter: Plays a crucial role in family rituals and upbringing, often taking on domestic responsibilities and contributing to familial harmony.</li>
                 <li><b>Gotra</b> - paternal lineage: Determines social identity and inheritance rights, traced patrilineally to a common ancestor, often a revered Rishi or sage.</li>
                 <li><b>Kula</b> - family: The primary social unit providing social, economic, and religious support; serves as the foundation for social cohesion and cultural continuity.</li>
                 <li><b>Gṛha</b> - household: Physical dwelling and the social unit centered around the family, where religious and ritual functions take place, and where familial relationships are nurtured.</li>
@@ -99,10 +99,10 @@
                 <li><b>Dūtās</b> - Messengers and spies who were emissaries who conveyed messages between rulers, allied states, and diplomatic missions. They also functioned as spies, gathering intelligence and information critical to the state.</li>
                 <li><b>Sabhapati</b> - The council leaders presided over the council of ministers or advisors, deliberating on policies, laws, and administrative decisions.</li>
                 <li><b>Samaharta</b> - The treasury official who managed the kingdom's treasury, overseeing revenue collection, expenditures, and financial administration.</li>
-                <li><b>Dharmadhvaja</b> - The standard bearer who carried the kingdom's flag or standard in battle and ceremonial processions, symbolizing the authority and values of the ruler.</li>
+                <li><b>Vaijayantikā</b> - The standard bearer who carried the kingdom's flag or standard in battle and ceremonial processions, symbolizing the authority and values of the ruler.</li>
                 <li><b>Rajjukas</b> - The revenue officers were responsible for assessing and collecting taxes, ensuring compliance with fiscal policies and contributing to the economic stability of the kingdom.</li>
-                <li><b>Antarangas</b> - The palace officials who served in various roles within the royal court, assisting the king in administrative matters, protocol, and maintaining order within the palace.</li>
-                <li><b>Gramani</b> - The rural officials oversaw agricultural and rural affairs, ensuring productivity, land use, and resolving disputes among rural communities.</li>
+                <li><b>Dauvārika</b> - The palace officials who served in various roles within the royal court, assisting the king in administrative matters, protocol, and maintaining order within the palace.</li>
+                <li><b>Gramani</b> - The head of the village who oversaw agricultural and rural affairs, ensuring productivity, land use, and resolving disputes among rural communities.</li>
             </ul>
         </div>
         
@@ -163,11 +163,11 @@
                 <li>Yajñas (fire sacrifices) were performed to appease gods, seek their blessings, and maintain cosmic order.</li>
                 <li>They involved intricate rituals, chanting of Vedic hymns, and offerings into the sacred fore, agnyadheya.</li>
                 <li>Yajñas were conducted by Brāhmaṇas according to specific rituals outlined in the Vedas.</li>
-                <li>Agnihotra - The offering of ghee to the fire that starts the rituals</li>
-                <li>Aśvamedha - Horse sacrifice that demonstrated royal power, fertility, and prosperity.</li>
-                <li>Gomedha - Cow sacrifice that honored gods, ensured agricultural fertility, and community welfare, the cow would the be eaten by the community.</li>
-                <li>Rājasūya - Royal consecration that legitimized kingship, showcased kingdom's prosperity and king's prowess</li>
-                <li>Soma rituals - Jyotiṣṭoma, Agniṣṭoma, Pravargya, Ukthya, Ṣoḍaśin, Atyagniṣṭoma, Atirātra, Aptoryāma, Vājapeya</li>
+                <li><br>Agnihotra</br> - The offering of ghee to the fire that starts the rituals</li>
+                <li><br>Aśvamedha</li>br> - Horse sacrifice that demonstrated royal power, fertility, and prosperity.</li>
+                <li><br>Gomedha</br> - Cow sacrifice that honored gods, ensured agricultural fertility, and community welfare, the cow would the be eaten by the community.</li>
+                <li><br>Rājasūya</br> - Royal consecration that legitimized kingship, showcased kingdom's prosperity and king's prowess</li>
+                <li><br>Soma rituals</br> - Jyotiṣṭoma, Agniṣṭoma, Pravargya, Ukthya, Ṣoḍaśin, Atyagniṣṭoma, Atirātra, Aptoryāma, Vājapeya</li>
             </ul>
             
 
