--- a/info/dictionary.html
+++ b/info/dictionary.html
@@ -70,7 +70,7 @@
     <li><strong>Pitṛ:</strong> Father, ancestor</li>
     <li><strong>Mātṛ:</strong> Mother</li>
     <li><strong>Putrā:</strong> Son</li>
-    <li><strong>Duhitā:</strong> Daughter</li>
+    <li><strong>Duhitṛ:</strong> Daughter</li>
     <li><strong>Svāsara:</strong> Brother-in-law or sister-in-law</li>
     <li><strong>Bhāgina:</strong> Sister</li>
     <li><strong>Bhrātṛ:</strong> Brother</li>
@@ -151,7 +151,7 @@
 
 <div class="section">
   <h2>Warfare</h2>
-  <ol>
+  <ul>
     <li><strong>Senā:</strong> Army or military force</li>
     <li><strong>Yuddha:</strong> Warfare or battle</li>
     <li><strong>Yoddha:</strong> Warrior or fighter</li>
@@ -174,7 +174,7 @@
     <li><strong>Pattis:</strong> Infantry or foot soldiers</li>
     <li><strong>Rathis:</strong> Charioteers or those who drive chariots</li>
     <li><strong>Prāpura:</strong> Fort or stronghold (note: not directly related to war, but included previously)</li>
-  </ol>
+  </ul>
 </div>
 
 <div class="section">
@@ -226,7 +226,7 @@
     <li><strong>Sapta Sindhu:</strong> The region of seven rivers including the Sindhu (Indus), mentioned in the Ṛgveda</li>
     <li><strong>Kuru:</strong> Region and kingdom associated with the Kuru dynasty, located around modern-day Delhi and Haryana</li>
     <li><strong>Manas Sarovar:</strong> Sacred lake in the Himālayas mentioned in the Ṛgveda</li>
-    <li><strong>Himālayas:</strong> Sacred mountain range mentioned in Vedic texts as the abode of gods</li>
+    <li><strong>Himāvant:</strong> Sacred mountain range mentioned in Vedic texts as the abode of gods</li>
     <li><strong>Mūjavant:</strong> Mt Muztagata in the Pamir range of Xinjiang, China. Where lots of Soma was gathered.</li>
     <li><strong>Brahmāvarta:</strong> Sacred region for Vedic rituals, located in present-day Haryana</li>
     <li><strong>Bhāratavarṣa:</strong> Bhāratavarṣa is the land ruled by the legendary king Bhārata.</li>
