--- a/info/dictionary.html
+++ b/info/dictionary.html
@@ -29,7 +29,6 @@
     <li><strong>Deva:</strong> Deity or god</li>
     <li><strong>Asura:</strong> Demon or anti-god</li>
     <li><strong>Māyā:</strong> Illusion or magic</li>
-    <li><strong>Rāṣṭra:</strong> Kingdom or realm</li>
     <li><strong>Mantra:</strong> Sacred utterance or sound</li>
     <li><strong>Loka:</strong> World or realm</li>
     <li><strong>Svarga:</strong> Heaven or celestial realm</li>
@@ -39,7 +38,7 @@
 
 <!-- Vedic Rituals -->
 <div class="section">
-  <h2>Vedic Rituals</h2>
+  <h2>Rituals</h2>
   <ul>
     <li><strong>Yajña:</strong> Ritual sacrifice or offering</li>
     <li><strong>Agnihotra:</strong> Daily fire ritual</li>
