--- a/info/figures.html
+++ b/info/figures.html
@@ -26,7 +26,7 @@
   <strong>Pañcālas</strong> - A significant tribe in the late Vedic period, well known for their kṣatriya.<br>
   <strong>Alinas</strong> - The Alinas were one of the tribes that fought against King Sudās in the Battle of the Ten Kings.<br>
   <strong>Bhālānas</strong> - The Bhālānas were part of the coalition in the Battle of the Ten Kings, as mentioned in the Rigveda.<br>
-  <strong>Pakthas</strong> - The Pakthas were another tribe involved in the coalition against King Sudās.<br>
+  <strong>Pakthas</strong> - The Pakthas were another tribe involved in the coalition against King Sudās. Associated with modern Pathans.<br>
   <strong>Śivas</strong> - The Śivas were a tribe that participated in the Battle of the Ten Kings.<br>
   <strong>Viśānins</strong> - The Viśānins were among the ten tribes that formed the coalition against King Sudās.<br>
   <strong>Parśus</strong> - The Parśus were one of the tribes involved in the Battle of the Ten Kings.<br>
@@ -54,9 +54,17 @@
   <strong>Pārāvata</strong><br>
   <strong>Ruśama</strong><br>
   <strong>Sārasvata</strong><br>
-  <strong>Srñjaya</strong><br>
-  
-  
+  <strong>Srñjaya</strong><br>  
+</div>
+
+<div>
+  <h2 class="heading">Kṣatriya</h2>
+  <strong>Sudās</strong> - A prominent king of the Bharata tribe known for his victory in the Battle of the Ten Kings (Daśarājña).<br>
+  <strong>Divodāsa</strong> - A king mentioned in the Rigveda, known for his conflicts and alliances with other tribes.<br>
+  <strong>Bharata</strong> - A legendary emperor and the eponymous ancestor of the Bharata dynasty, which played a significant role in early Indian history.<br>
+  <strong>Trasadasyu</strong> - A king mentioned in the Rigveda, known for his interactions with sage Viśvāmitra.<br>
+  <strong>Viśvāmitra</strong> - Kṣatriya king of Kanyakubja who later became a revered sage.<br>
+  <strong>Ikshvaku</strong> - A king mentioned in the Rigveda, known for his conflicts and alliances with other tribes.<br>
 </div>
 
 <div>
