--- a/info/history.html
+++ b/info/history.html
@@ -29,7 +29,7 @@
 
     <!-- Section: Early Vedic Period -->
     <div class="section">
-      <h2>Early Vedic Period (1500–1000 BCE)</h2>
+      <h2>Early Vedic Period (1500-1000 BCE)</h2>
       <p>During the Early Vedic Period, the Vedic Aryans established a predominantly pastoral society with a strong emphasis on cattle rearing and agriculture. Their society was organized into tribes, each led by a chieftain (<em>rājan</em>) who was responsible for protection and governance.</p>
       <p>The Ṛgveda, composed during this time, provides insights into their religious practices, social structure, and daily life. Key deities worshiped included Agni (fire god), Indra (warrior god and king of gods), and Varuṇa (god of cosmic order).</p>
     </div>
@@ -64,7 +64,7 @@
 
     <!-- Section: Later Vedic Period -->
     <div class="section">
-      <h2>Later Vedic Period (1000–500 BCE)</h2>
+      <h2>Later Vedic Period (1000-500 BCE)</h2>
       <p>The Later Vedic Period saw the expansion of Vedic Aryan settlements into the Ganges River Valley. This period marked significant social and political changes, including the emergence of larger kingdoms and more complex societal structures.</p>
       <p>The composition of the other three Vedas (Sāmaveda, Yajurveda, and Atharvaveda) occurred during this time, reflecting a more developed ritualistic and philosophical framework. The concept of <em>varṇa</em> (social classes) became more rigid, and the role of Brahmins (priests) became more prominent in society.</p>
     </div>
