--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <!-- title -->
   <h1 class="heading">Ṛgveda</h1>
-  <p class="subtitle">by loka</p>
+  <p class="subtitle">by laukanāthás</p>
   <hr>
   <div>
     <!-- Books -->
