--- a/info/mantras.html
+++ b/info/mantras.html
@@ -18,7 +18,7 @@
 
   <!-- title -->
   <h1 class="heading">Mantras</h1>
-  <p class="subtitle">List of  in the Ṛgveda</p>
+  <p class="subtitle">List of Mantras in the Ṛgveda</p>
   <hr>
   <div>
     <!-- Gayatri Mantra -->
